# dses

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  README.rst  pyproject.toml
.github/workflows/: ci-cd.yaml
docs/: Makefile  conf.py  example.ipynb  index.md  index.rst  make.bat
docs/_static/: custom.css
docs/csvs/: flag.csv  sample.csv  user.csv
docs/data_standards/: index.md  index.rst  samples.rst  terminologies.rst  users.rst
docs/data_standards/roles/: index.md
docs/data_standards/users/: index.md
docs/jsons/: eg1_accession.json
src/dses/: __init__.py
tests/: test_dses.py
