[tool.poetry]
name = "dses"
version = "0.1.1"
description = "Inter-operable Data Standards for Environmental Surveillance"
authors = ["Sneha S"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pyyaml = "^6.0.1"

[tool.poetry.group.docs.dependencies]
myst-nb = {version = "^1.1.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-autobuild = "^2024.4.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
